--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.2",
+    "@heroui/select": "^2.4.13",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
     "@tanstack/react-query": "^5.59.16",
+    "auto-zustand-selectors-hook": "^3.0.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "next": "^15.0.2",
+    "next-intl": "^3.26.5",
     "next-nprogress-bar": "^2.4.7",
+    "nookies": "^2.5.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -44,9 +49,6 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
-      "pnpm lint:fix",
-      "pnpm format:fix"
-    ]
+    "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": ["pnpm lint:fix", "pnpm format:fix"]
   }
 }
