--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@heroui/select": "^2.4.13",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@tanstack/react-query": "^5.59.16",
     "auto-zustand-selectors-hook": "^3.0.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.475.0",
     "next": "^15.0.2",
     "next-intl": "^3.26.5",
     "next-nprogress-bar": "^2.4.7",
@@ -30,6 +34,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
