--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nookies": "^2.5.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-simple-star-rating": "^5.1.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
