--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "postinstall": "husky"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.2",
     "@heroui/select": "^2.4.13",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.59.16",
@@ -26,6 +32,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
@@ -34,10 +41,13 @@
     "next-nprogress-bar": "^2.4.7",
     "nookies": "^2.5.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-day-picker": "^9.7.0",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hook-form": "^7.57.0",
     "react-simple-star-rating": "^5.1.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.64",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
