--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.57.0",
     "react-simple-star-rating": "^5.1.7",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.64",
