--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-oauth/google": "^0.12.2",
     "@tanstack/react-query": "^5.59.16",
     "auto-zustand-selectors-hook": "^3.0.1",
     "axios": "^1.7.7",
