--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
+    "motion": "^12.23.12",
     "next": "^15.0.2",
     "next-intl": "^3.26.5",
     "next-nprogress-bar": "^2.4.7",
