--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "motion": "^12.23.12",
-    "next": "^15.0.2",
+    "next": "15.0.7",
     "next-intl": "^3.26.5",
     "next-nprogress-bar": "^2.4.7",
     "nookies": "^2.5.2",
